@@ -1,4 +1,5 @@
-(r4949) Enable scrolling with the mouse wheel in the file viewer.
+(r4956) Fix a vanilla display glitch in the file viewer (at least in the German version): MOM's portrait was displayed at a different height compared to all other portraits.
+(r4954) Enable scrolling with the mouse wheel in the file viewer.
 (r4953) Fix a vanilla graphics glitch in the laptop file viewer: The background of the content area was not completely filled.
 (r4949) Enable scrolling of the finance log with the mouse wheel.
 (r4942) Enable scrolling of the history log with the mouse wheel.
